forum refresh and load more base complete

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -13,3 +13,10 @@ html, body
     height 0
     clear both
     visibility hidden
+
+.no-data
+  width 100%
+  height 100%
+  display flex
+  justify-content center
+  align-items center
