--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,6 +1,9 @@
 /*通用样式*/
 html, body
   height 100%
+  background-color #fff
+  @media (min-width: 480px)
+    background-color #e9ebec
 
 .mu-appbar-title
   text-overflow initial
@@ -15,8 +18,30 @@ html, body
     visibility hidden
 
 .no-data
-  width 100%
-  height 100%
+  width 100vw
+  height 100vh
   display flex
   justify-content center
   align-items center
+
+.mu-drawer
+  width 280px
+
+@media (max-width: 480px)
+  .dplayer .dplayer-video-wrap
+    height 0
+    padding-bottom 56.25%
+  .dplayer .dplayer-video-wrap .dplayer-video
+    position absolute
+
+.flickity-viewport
+  height 340px !important
+  @media (max-width: 480px)
+    height 0 !important
+    padding-bottom 56.25% !important
+
+@media (max-width: 480px)
+  .mu-paper-1
+    box-shadow none
+  .mu-paper-round
+   border-radius 0
