--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -18,14 +18,14 @@
 
 .no-data {
   width: 100%;
-  height: 100%;
+  min-height: 300px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .fade-down-enter-active, .fade-down-leave-active {
-  transition: all .5s ease;
+  transition: all .4s ease;
 }
 .fade-down-enter, .fade-down-leave-active {
   opacity: 0;
